add semantic tag

--- a/src/html/components/banner.html
+++ b/src/html/components/banner.html
@@ -5,9 +5,8 @@
     </div>
     <div class="banner__bottom">
       <div class="banner__bottom-block">
-        <div class="banner__bottom-heading">@@title</div>
+        <h2 class="banner__bottom-heading">@@title</h2>
         <p class="banner__bottom-text">@@text</p>
-        <p class="banner__bottom-text"></p>
       </div>
     </div>
   </div>
