--- a/src/html/components/food.html
+++ b/src/html/components/food.html
@@ -11,58 +11,58 @@
     <div class="food__class">
       <div class="food__class-wrapper">
         <div class="food__class-item active" data-tab-content="short">
-          <p class="food__class-heading">Экономический класс</p>
-          <div class="food__class-wrap">
-            <div class="food__class-flex">
+          <h2 class="food__class-heading">Экономический класс</h2>
+          <ul class="food__class-wrap">
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Прохладителые напитки</p>
-            </div>
-          </div>
+              <span class="food__class-desc">Прохладителые напитки</span>
+            </li>
+          </ul>
         </div>
         <div class="food__class-item" data-tab-content="long">
-          <p class="food__class-heading">Экономический класс</p>
-          <div class="food__class-wrap">
-            <div class="food__class-flex">
+          <h2 class="food__class-heading">Экономический класс</h2>
+          <ul class="food__class-wrap">
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Прохладителые напитки</p>
-            </div>
-            <div class="food__class-flex">
+              <span class="food__class-desc">Прохладителые напитки</span>
+            </li>
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Горячее питание</p>
-            </div>
-          </div>
+              <span class="food__class-desc">Горячее питание</span>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="food__class-wrapper">
         <div class="food__class-item active" data-tab-content="short">
-          <p class="food__class-heading">бизнес класс</p>
-          <div class="food__class-wrap">
-            <div class="food__class-flex">
+          <h2 class="food__class-heading">бизнес класс</h2>
+          <ul class="food__class-wrap">
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Прохладителые напитки</p>
-            </div>
-            <div class="food__class-flex">
+              <span class="food__class-desc">Прохладителые напитки</span>
+            </li>
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Горячее питание</p>
-            </div>
-            <div class="food__class-flex">
+              <span class="food__class-desc">Горячее питание</span>
+            </li>
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Чай,кофе</p>
-            </div>
-          </div>
+              <span class="food__class-desc">Чай,кофе</span>
+            </li>
+          </ul>
         </div>
         <div class="food__class-item" data-tab-content="long">
-          <p class="food__class-heading">бизнес класс</p>
-          <div class="food__class-wrap">
-            <div class="food__class-flex">
+          <h2 class="food__class-heading">бизнес класс</h2>
+          <ul class="food__class-wrap">
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Горячее питание</p>
-            </div>
-            <div class="food__class-flex">
+              <span class="food__class-desc">Горячее питание</span>
+            </li>
+            <li class="food__class-flex">
               <img src="./img/food/water.svg" alt="" />
-              <p class="food__class-desc">Чай,кофе</p>
-            </div>
-          </div>
+              <span class="food__class-desc">Чай,кофе</span>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
