--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -6,34 +6,36 @@
         <p class="footer__address">Адрес: <span>Узбекистан, Ташкент, ул ххххххххх</span></p>
       </div>
       <nav class="footer__nav">
-        <a href="./about.html">О компании</a>
-        <a href="./service.html">Услуги</a>
-        <a href="./news.html">Новости</a>
-        <a href="./vacancy.html">Вакансии</a>
-        <a href="./contacts.html">Контакты</a>
+        <ul class="footer__nav-list">
+          <li><a href="./about.html">О компании</a></li>
+          <li><a href="./service.html">Услуги</a></li>
+          <li><a href="./news.html">Новости</a></li>
+          <li><a href="./vacancy.html">Вакансии</a> <a href="./contacts.html">Контакты</a></li>
+        </ul>
       </nav>
       <nav class="footer__nav">
-        <a href="#">Карта полетов</a>
-        <a href="./fleet.html">Наш флот и питание на борту</a>
-        <a href="./tarif-inner.html">Тарифы</a>
-        <a href="./bagagge-inner.html">Багаж</a>
-        <a href="./animal.html">Перевозка животных</a>
+        <ul class="footer__nav-list">
+          <li><a href="#">Карта полетов</a></li>
+          <li><a href="./fleet.html">Наш флот и питание на борту</a></li>
+          <li><a href="./tarif-inner.html">Тарифы</a> <a href="./bagagge-inner.html">Багаж</a></li>
+          <li><a href="./animal.html">Перевозка животных</a></li>
+        </ul>
       </nav>
       <div class="footer__right">
         <div class="footer__phone">
           <p class="footer__phone-heading">Наш номер телефона:</p>
-          <a href="tel:998900000000">
+          <a href="tel:998900000000" target="_blank">
             <img src="./img/icons/phone.svg" alt="" />
             <span>+99890 000 00 00</span>
           </a>
         </div>
         <div class="footer__social">
           <p class="footer__social-heading">Наши соц сети:</p>
-          <a href="#">
+          <a href="https://telegram.org/" target="_blank" rel="nofollow">
             <img src="./img/icons/telegram.svg" alt="" />
             <span>Чат в Telegram</span>
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/" target="_blank" rel="nofollow">
             <img src="./img/icons/instagram.svg" alt="" />
             <span>Наш инстаграмм</span>
           </a>
