--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -25,34 +25,32 @@
               <li class="header__nav-item"><a href="./vacancy.html">Вакансии</a></li>
               <li class="header__nav-item"><a href="./contacts.html">Контакты</a></li>
             </ul>
-            <div class="dropdown">
-              <a href="./about.html">Информация о компании</a>
-              <a href="./fleet.html">Наш флот</a>
-              <a href="./food.html">Питание на борту</a>
-              <a href="#">Карта полетов</a>
-            </div>
-            <div class="dropdown">
-              <a href="./service.html">Услуги кооторые предоставляет Asia Union Airlines</a>
-              <a href="./tarif-inner.html">Тарифы</a>
-              <a href="./bagagge-inner.html">Багаж</a>
-              <a href="./animal.html">Перевозка животных</a>
-            </div>
+            <ul class="dropdown">
+              <li><a href="./about.html">Информация о компании</a></li>
+              <li><a href="./fleet.html">Наш флот</a></li>
+              <li><a href="./food.html">Питание на борту</a></li>
+              <li><a href="#">Карта полетов</a></li>
+            </ul>
+            <ul class="dropdown">
+              <li><a href="./service.html">Услуги кооторые предоставляет Asia Union Airlines</a></li>
+              <li><a href="./tarif-inner.html">Тарифы</a></li>
+              <li><a href="./bagagge-inner.html">Багаж</a></li>
+              <li><a href="./animal.html">Перевозка животных</a></li>
+            </ul>
           </nav>
           <a class="header__phone" href="tel:998555069999">
             <span class="header__phone-svg">@@include('../shared/phone.html')</span>
             <span class="header__phone-num">+99855 506 99 99</span>
           </a>
-          <div class="header__search">
-            <div class="header__search-svg">@@include('../shared/search.html')</div>
-          </div>
+          <button class="header__search">@@include('../shared/search.html')</button>
           <div class="header__lang">
             <span class="header__lang-selected">РУ</span>
             <div class="header__lang-dropdown">
-              <div class="header__lang-dropdown-items">
-                <span class="header__lang-dropdown-item">РУ</span>
-                <span class="header__lang-dropdown-item">UZ</span>
-                <span class="header__lang-dropdown-item">EN</span>
-              </div>
+              <ul class="header__lang-dropdown-items">
+                <li class="header__lang-dropdown-item"><a href="#">РУ</a></li>
+                <li class="header__lang-dropdown-item"><a href="#">UZ</a></li>
+                <li class="header__lang-dropdown-item"><a href="#">EN</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -83,10 +81,10 @@
             @@include('../shared/arrow.html')
           </div>
           <ul class="header__menu-item-list">
-            <a href="./service.html">Услуги кооторые предоставляет Asia Union Airlines</a>
-            <a href="./tarif-inner.html">Тарифы</a>
-            <a href="./bagagge-inner.html">Багаж</a>
-            <a href="./animal.html">Перевозка животных</a>
+            <li><a href="./service.html">Услуги кооторые предоставляет Asia Union Airlines</a></li>
+            <li><a href="./tarif-inner.html">Тарифы</a></li>
+            <li><a href="./bagagge-inner.html">Багаж</a></li>
+            <li><a href="./animal.html">Перевозка животных</a></li>
           </ul>
         </li>
         <li class="header__menu-item"><a href="./news.html">Новости</a></li>
@@ -94,9 +92,9 @@
         <li class="header__menu-item"><a href="./contacts.html">Контакты</a></li>
       </ul>
     </div>
-    <div class="header__search-input">
-      <span>@@include('../shared/search.html')</span>
+    <form class="header__search-input">
+      <button>@@include('../shared/search.html')</button>
       <input type="text" placeholder="Найти..." />
-    </div>
+    </form>
   </div>
 </header>
