--- a/src/html/components/mainFlot.html
+++ b/src/html/components/mainFlot.html
@@ -1,31 +1,31 @@
 <section class="mainFlot">
   <div class="mainFlot__inner container">
-    <div class="mainFlot__heading">НАШ ФЛОТ</div>
-    <div class="mainFlot__flex">
-      <a href="./fleet-inner.html" class="mainFlot__item">
-        <p class="mainFlot__name">A330</p>
-        <div class="mainFlot__img">
+    <h1 class="mainFlot__heading">НАШ ФЛОТ</h1>
+    <ul class="mainFlot__flex">
+      <li class="mainFlot__item">
+        <a href="./fleet-inner.html" class="mainFlot__link">
+          <span class="mainFlot__name">A330</span>
           <img src="./img/mainflot/a330.png" alt="" />
-        </div>
-      </a>
-      <a href="./fleet-inner.html" class="mainFlot__item">
-        <p class="mainFlot__name">Falcon 7x</p>
-        <div class="mainFlot__img">
+        </a>
+      </li>
+      <li class="mainFlot__item">
+        <a href="./fleet-inner.html" class="mainFlot__link">
+          <span class="mainFlot__name">Falcon 7x</span>
           <img src="./img/mainflot/a330.png" alt="" />
-        </div>
-      </a>
-      <a href="./fleet-inner.html" class="mainFlot__item">
-        <p class="mainFlot__name">Falcon 7x</p>
-        <div class="mainFlot__img">
+        </a>
+      </li>
+      <li class="mainFlot__item">
+        <a href="./fleet-inner.html" class="mainFlot__link">
+          <span class="mainFlot__name">Falcon 7x</span>
           <img src="./img/mainflot/a330.png" alt="" />
-        </div>
-      </a>
-      <a href="./fleet-inner.html" class="mainFlot__item">
-        <p class="mainFlot__name">Falcon 7x</p>
-        <div class="mainFlot__img">
+        </a>
+      </li>
+      <li class="mainFlot__item">
+        <a href="./fleet-inner.html" class="mainFlot__link">
+          <span class="mainFlot__name">Falcon 7x</span>
           <img src="./img/mainflot/a330.png" alt="" />
-        </div>
-      </a>
-    </div>
+        </a>
+      </li>
+    </ul>
   </div>
 </section>
