--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -40,10 +40,12 @@
     }
   }
   &__nav {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
     margin-top: 40px;
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
     a {
       font-family: var(--font-family);
       font-weight: 600;
