--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -378,7 +378,7 @@
     &.active span {
       &:first-of-type,
       &:last-of-type {
-        scale: 0;
+        transform: scaleX(0);
       }
     }
   }
@@ -395,6 +395,7 @@
     align-items: center;
     transform: translate(0, -100%);
     transition: 0.5s ease;
+    z-index: 1;
     &-list {
       display: flex;
       flex-direction: column;
@@ -506,6 +507,8 @@
       flex-direction: row-reverse;
       justify-content: space-between;
       padding-right: 30px;
+      height: 60px;
+      z-index: 2;
     }
     &__logo {
       margin-right: 0;
