--- a/src/scss/components/mainFlot.scss
+++ b/src/scss/components/mainFlot.scss
@@ -19,13 +19,9 @@
     padding: 25px;
     border-radius: 25px;
     background: #f6f6f6;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     cursor: pointer;
     position: relative;
     overflow: hidden;
-    gap: 30px;
     &:hover {
       &::before {
         transform: translate(-50%, 0%) scale(60);
@@ -47,6 +43,18 @@
       transform: translate(-50%, 0) scale(0);
       transform-origin: center bottom;
       transition: 0.5s ease;
+    }
+  }
+  &__link {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
+    position: relative;
+    z-index: 1;
+    img{
+      padding: 0 30px;
+      width: 100%;
     }
   }
   &__name {
