--- a/src/scss/sections/info.scss
+++ b/src/scss/sections/info.scss
@@ -14,14 +14,12 @@
       justify-content: space-between;
       align-items: center;
     }
-    &__left {
+    &__heading {
       max-width: 360px;
       width: 100%;
-      &-heading {
-        font-weight: 700;
-        font-size: 50px;
-        color: #2b0d47;
-      }
+      font-weight: 700;
+      font-size: 50px;
+      color: #2b0d47;
     }
     &__right {
       display: flex;
@@ -33,9 +31,6 @@
         box-shadow: 0 0 9px 0 rgba(191, 191, 191, 0.25);
         background: #fff;
         padding: 35px;
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
         height: fit-content;
         width: 100%;
         cursor: pointer;
@@ -87,12 +82,9 @@
         color: #2b0d47;
       }
       &-link {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 3;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
       }
     }
   }
@@ -103,8 +95,8 @@
           font-size: 36px;
         }
       }
-      &__right{
-        &-card{
+      &__right {
+        &-card {
           padding: 20px;
         }
       }
