--- a/src/scss/sections/intro.scss
+++ b/src/scss/sections/intro.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     margin-top: 0;
-    overflow: hidden;
+    // overflow: hidden;
     &__bg {
       width: 100%;
       height: 100%;
